# kilnlatte-dock

./: CLAUDE.md  CMakeLists.txt  README.md  flake.nix  package.nix  result
app/: CMakeLists.txt  alternativeshelper.cpp  config-latte.h.cmake  dbusreports.cpp  dbusreports.h  infoview.cpp  infoview.h  latte-indicators.knsrc  lattecorona.cpp  lattecorona.h  main.cpp  primaryoutputwatcher.cpp  primaryoutputwatcher.h  screengeometrycalculator.h  screenpool.cpp  screenpool.h  settingscontrolrecords.h  settingscontrolregistry.cpp  settingscontrolregistry.h
app/packageplugins/indicator/: CMakeLists.txt
ci/: build-and-gate.sh
cmake/: CheckLayerShellSetScreen.cpp
containment/: CMakeLists.txt
containmentactions/contextmenu/: CMakeLists.txt  menu.cpp
docs/: PORTING_PLAN.md  QML_EXTRACTION_PLAN.md  REVIEW_NOTES.md  TESTING.md  dbus-interface-reference.md  dbus-observability-interface.md  e2e-interaction-test-plan.md  known-defects.md  manual-flake-removal-testing.md  multi-distro-ci-plan.md  ng-upstream-audit.md  panel-issues-plan.md  session-handoff-editmode-blueprint.md  session-handoff.md  ub-catching-plan.md
indicators/: CMakeLists.txt
indicators/default/: metadata.json
indicators/default/package/config/: config.qml
indicators/default/package/ui/: main.qml
indicators/org.kde.latte.plasma/: metadata.json
indicators/org.kde.latte.plasma/package/config/: config.qml
indicators/org.kde.latte.plasma/package/ui/: AppletBackLayer.qml  FrontLayer.qml  TaskBackLayer.qml  main.qml
indicators/org.kde.latte.plasmatabstyle/: metadata.json
indicators/org.kde.latte.plasmatabstyle/package/ui/: BackLayer.qml  main.qml
packaging/: run-installed-smoke.sh
plasmoid/: CMakeLists.txt
scripts/: build-check.sh  gate-all.sh  installed-package-gate.sh  lib-e2e-seed.sh  lib-installed-package-gate.sh  lib-qml-env.sh  matrix-fixture-check.sh  preview-contract-rules.sh  qml-compile-gate.sh  qml-effect-rules.sh  qml-interaction-tests.sh  qml-tooltip-rules.sh  qmllint-gate.sh  restart-staged.sh  run-e2e.sh  run-staged.sh  sceneprobe-gate.sh
tests/: CMakeLists.txt  abstractlayouttest.cpp  activitiesinfotest.cpp  behaviorwiringaudittest.cpp  coretoolstest.cpp  datatypestest.cpp  dockidentitycontracttest.cpp  importerlogictest.cpp  importerregressiontest.cpp  installed-package-gate-selftest.sh  lastactivewindowtest.cpp  layershellmappingtest.cpp  lengthhandleraudittest.cpp  panelbackgroundtest.cpp  qmllint-baseline  ratchet-baseline  schemesmodeltest.cpp  screenpooltest.cpp  settingscontrolregistrytest.cpp  settingsinventorytest.cpp  sourceguardtest.cpp  (+5 more)
(+456 files in other folders)
